Feat/test gh actions (#102)
* fix: add missing dagger develop on workflow

* chore: fix hooks

* chore: add emojis, and nice title

* refactor: add better workflow version, add extra dagger versions

* refactor: add function to run gofmt on generated code

* refactor: add support for go modules in release-please

* refactor: enhance the release workflow

--- a/.github/workflows/mod-module-example-ci.yaml
+++ b/.github/workflows/mod-module-example-ci.yaml
@@ -1,129 +1,145 @@
 ---
-name: Module module-example CI
+name: module-example CI 🧹
 on:
-  push:
-    branches:
-      - main
-      - master
-    paths:
-      - 'module-example/**/*.go'
-  pull_request:
-    paths:
-      - 'module-example/**/*.go'
-  workflow_dispatch:
+    push:
+        branches:
+            - main
+            - master
+        paths:
+            - module-example/**/*.go
+    pull_request:
+        paths:
+            - module-example/**/*.go
+    workflow_dispatch:
 
 permissions:
-  contents: read
-  pull-requests: read
-  checks: write
+    contents: read
+    pull-requests: read
+    checks: write
 
 defaults:
-  run:
-    working-directory: module-example
+    run:
+        working-directory: module-example
 
 jobs:
-  linter:
-    strategy:
-      matrix:
-        go: ['1.22']
-        dagversion: [0.11.6, 0.11.7]
-    name: Lint module-example on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: ${{ matrix.go }}
-      - name: Dagger Develop on Module 📦 with Dagger ${{ matrix.dagversion }}
-        uses: dagger/dagger-for-github@v5
-        with:
-          verb: develop
-          module: module-example
-          version: ${{ matrix.dagversion }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Dagger Develop on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
-        uses: dagger/dagger-for-github@v5
-        with:
-          verb: develop
-          module: module-example/tests
-          version: ${{ matrix.dagversion }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Dagger Call on Module with Dagger ${{ matrix.dagversion }}
-        uses: dagger/dagger-for-github@v5
-        with:
-          verb: call
-          module: module-example
-          version: ${{ matrix.dagversion }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Dagger Call on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
-        uses: dagger/dagger-for-github@v5
-        with:
-          verb: call
-          module: module-example/tests
-          version: ${{ matrix.dagversion }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    linter:
+        strategy:
+            matrix:
+                go: ['1.22']
+                dagversion: [0.11.6, 0.11.7, 0.11.8, 0.11.9]
+        name: Lint module-example on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-go@v5
+              with:
+                  go-version: ${{ matrix.go }}
+            - name: Dagger Develop on Module 📦 with Dagger ${{ matrix.dagversion }}
+              uses: dagger/dagger-for-github@v5
+              with:
+                  verb: develop
+                  module: module-example
+                  version: ${{ matrix.dagversion }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: Dagger Develop on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
+              uses: dagger/dagger-for-github@v5
+              with:
+                  verb: develop
+                  module: module-example/tests
+                  version: ${{ matrix.dagversion }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: Dagger Call on Module with Dagger ${{ matrix.dagversion }}
+              uses: dagger/dagger-for-github@v5
+              with:
+                  verb: call
+                  module: module-example
+                  version: ${{ matrix.dagversion }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: Dagger Call on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
+              uses: dagger/dagger-for-github@v5
+              with:
+                  verb: call
+                  module: module-example/tests
+                  version: ${{ matrix.dagversion }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  golangci-lint:
-    strategy:
-      matrix:
-        go: ['1.22']
-    name: GolangCI-Lint for module-example
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: ${{ matrix.go }}
-      - name: Run golangci-lint on module-example 📦
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: v1.58
-          args: --config .golangci.yml ./module-example/dagger
-      - name: Run golangci-lint on module-example/tests 🧪
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: v1.58
-          args: --config .golangci.yml ./module-example/tests/dagger
+    golangci-lint:
+        strategy:
+            matrix:
+                go: ['1.22']
+        name: GolangCI-Lint for module-example
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-go@v5
+              with:
+                  go-version: ${{ matrix.go }}
+            - name: Dagger Develop on Module 📦 module-example with Dagger ${{ matrix.dagversion }}
+              uses: dagger/dagger-for-github@v5
+              with:
+                  verb: develop
+                  module: module-example
+                  version: ${{ matrix.dagversion }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: Run golangci-lint on module-example 📦
+              uses: golangci/golangci-lint-action@v6
+              with:
+                  version: v1.58
+                  args: --config .golangci.yml ./module-example/dagger
+            - name: Dagger Develop on Module tests 🧪 module-example with Dagger ${{ matrix.dagversion }}
+              uses: dagger/dagger-for-github@v5
+              with:
+                  verb: develop
+                  module: module-example/tests
+                  version: ${{ matrix.dagversion }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: Run golangci-lint on module-example/tests 🧪
+              uses: golangci/golangci-lint-action@v6
+              with:
+                  version: v1.58
+                  args: --config .golangci.yml ./module-example/tests/dagger
 
-  module-test:
-    strategy:
-      matrix:
-        go: ['1.22']
-        dagversion: [0.11.6, 0.11.7]
-    needs: linter
-    name: Run Tests 🧪 in module-example on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: ${{ matrix.go }}
-      - name: Dagger Develop on Module 📦 with Dagger ${{ matrix.dagversion }}
-        uses: dagger/dagger-for-github@v5
-        with:
-          verb: develop
-          module: module-example
-          version: ${{ matrix.dagversion }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Dagger Develop on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
-        uses: dagger/dagger-for-github@v5
-        with:
-          verb: develop
-          module: module-example/tests
-          version: ${{ matrix.dagversion }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Running Tests 💣 in module-example on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
-        uses: dagger/dagger-for-github@v5
-        with:
-          verb: call
-          args: test-all
-          module: module-example/tests
-          version: ${{ matrix.dagversion }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    module-test:
+        strategy:
+            matrix:
+                go: ['1.22']
+                dagversion: [0.11.6, 0.11.7, 0.11.8, 0.11.9]
+        needs: [linter, golangci-lint]
+        name: Run Tests 🧪 in module-example on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-go@v5
+              with:
+                  go-version: ${{ matrix.go }}
+            - name: Dagger Develop on Module 📦 with Dagger ${{ matrix.dagversion }}
+              uses: dagger/dagger-for-github@v5
+              with:
+                  verb: develop
+                  module: module-example
+                  version: ${{ matrix.dagversion }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: Dagger Develop on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
+              uses: dagger/dagger-for-github@v5
+              with:
+                  verb: develop
+                  module: module-example/tests
+                  version: ${{ matrix.dagversion }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: Running Tests 💣 in module-example on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+              uses: dagger/dagger-for-github@v5
+              with:
+                  verb: call
+                  args: test-all
+                  module: module-example/tests
+                  version: ${{ matrix.dagversion }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
