refactor: restore configuration for release-please

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,10 +1,10 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "packages": {
-    "module-example": {
+    ".": {
       "bump-minor-pre-major": true,
       "bump-patch-for-minor-pre-major": true,
-      "changelog-path": "module-example/CHANGELOG.md",
+      "changelog-path": "CHANGELOG.md",
       "changelog-sections": [
         {
           "section": "Features",
@@ -62,73 +62,7 @@
       ],
       "draft": false,
       "extra-files": [
-        "module-example/README.md"
-      ],
-      "prerelease": false,
-      "release-type": "go"
-    },
-    "gotest": {
-      "bump-minor-pre-major": true,
-      "bump-patch-for-minor-pre-major": true,
-      "changelog-path": "gotest/CHANGELOG.md",
-      "changelog-sections": [
-        {
-          "section": "Features",
-          "type": "feat"
-        },
-        {
-          "section": "Bug Fixes",
-          "type": "fix"
-        },
-        {
-          "section": "Other",
-          "type": "chore"
-        },
-        {
-          "section": "Docs",
-          "type": "docs"
-        },
-        {
-          "section": "Performance",
-          "type": "perf"
-        },
-        {
-          "hidden": true,
-          "section": "Build",
-          "type": "build"
-        },
-        {
-          "section": "Dependency Updates",
-          "type": "deps"
-        },
-        {
-          "hidden": true,
-          "section": "CI",
-          "type": "ci"
-        },
-        {
-          "section": "Refactoring",
-          "type": "refactor"
-        },
-        {
-          "hidden": true,
-          "section": "Reverts",
-          "type": "revert"
-        },
-        {
-          "hidden": true,
-          "section": "Styling",
-          "type": "style"
-        },
-        {
-          "hidden": true,
-          "section": "Tests",
-          "type": "test"
-        }
-      ],
-      "draft": false,
-      "extra-files": [
-        "gotest/README.md"
+        "README.md"
       ],
       "prerelease": false,
       "release-type": "go"
