docs: add updated documentation

--- a/.github/workflows/mod-module-template-ci.yaml
+++ b/.github/workflows/mod-module-template-ci.yaml
@@ -1,15 +1,15 @@
 ---
-name: module-example CI 🧹
+name: module-template CI 🧹
 on:
     push:
         branches:
             - main
             - master
         paths:
-            - module-example/**/*.go
+            - module-template/**/*.go
     pull_request:
         paths:
-            - module-example/**/*.go
+            - module-template/**/*.go
     workflow_dispatch:
 
 permissions:
@@ -19,7 +19,7 @@ permissions:
 
 defaults:
     run:
-        working-directory: module-example
+        working-directory: module-template
 
 jobs:
     linter:
@@ -27,7 +27,7 @@ jobs:
             matrix:
                 go: ['1.22']
                 dagversion: [0.11.6, 0.11.7, 0.11.8, 0.11.9]
-        name: Lint module-example on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+        name: Lint module-template on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
@@ -38,7 +38,7 @@ jobs:
               uses: dagger/dagger-for-github@v5
               with:
                   verb: develop
-                  module: module-example
+                  module: module-template
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -46,7 +46,7 @@ jobs:
               uses: dagger/dagger-for-github@v5
               with:
                   verb: develop
-                  module: module-example/tests
+                  module: module-template/tests
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -54,7 +54,7 @@ jobs:
               uses: dagger/dagger-for-github@v5
               with:
                   verb: call
-                  module: module-example
+                  module: module-template
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -62,7 +62,7 @@ jobs:
               uses: dagger/dagger-for-github@v5
               with:
                   verb: call
-                  module: module-example/tests
+                  module: module-template/tests
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -71,39 +71,39 @@ jobs:
         strategy:
             matrix:
                 go: ['1.22']
-        name: GolangCI-Lint for module-example
+        name: GolangCI-Lint for module-template
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
             - uses: actions/setup-go@v5
               with:
                   go-version: ${{ matrix.go }}
-            - name: Dagger Develop on Module 📦 module-example with Dagger ${{ matrix.dagversion }}
+            - name: Dagger Develop on Module 📦 module-template with Dagger ${{ matrix.dagversion }}
               uses: dagger/dagger-for-github@v5
               with:
                   verb: develop
-                  module: module-example
+                  module: module-template
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Run golangci-lint on module-example 📦
+            - name: Run golangci-lint on module-template 📦
               uses: golangci/golangci-lint-action@v6
               with:
                   version: v1.58
-                  args: --config .golangci.yml ./module-example/dagger
-            - name: Dagger Develop on Module tests 🧪 module-example with Dagger ${{ matrix.dagversion }}
+                  args: --config .golangci.yml ./module-template/dagger
+            - name: Dagger Develop on Module tests 🧪 module-template with Dagger ${{ matrix.dagversion }}
               uses: dagger/dagger-for-github@v5
               with:
                   verb: develop
-                  module: module-example/tests
+                  module: module-template/tests
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Run golangci-lint on module-example/tests 🧪
+            - name: Run golangci-lint on module-template/tests 🧪
               uses: golangci/golangci-lint-action@v6
               with:
                   version: v1.58
-                  args: --config .golangci.yml ./module-example/tests/dagger
+                  args: --config .golangci.yml ./module-template/tests/dagger
 
     module-test:
         strategy:
@@ -111,7 +111,7 @@ jobs:
                 go: ['1.22']
                 dagversion: [0.11.6, 0.11.7, 0.11.8, 0.11.9]
         needs: [linter, golangci-lint]
-        name: Run Tests 🧪 in module-example on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+        name: Run Tests 🧪 in module-template on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
@@ -122,7 +122,7 @@ jobs:
               uses: dagger/dagger-for-github@v5
               with:
                   verb: develop
-                  module: module-example
+                  module: module-template
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -130,16 +130,16 @@ jobs:
               uses: dagger/dagger-for-github@v5
               with:
                   verb: develop
-                  module: module-example/tests
+                  module: module-template/tests
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Running Tests 💣 in module-example on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+            - name: Running Tests 💣 in module-template on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
               uses: dagger/dagger-for-github@v5
               with:
                   verb: call
                   args: test-all
-                  module: module-example/tests
+                  module: module-template/tests
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
