refactor: add newline break on gotest, simulate release

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -7,7 +7,7 @@
       "bump-minor-pre-major": true,
       "bump-patch-for-minor-pre-major": true,
       "draft": false,
-      "include-component-in-tag": true,
+      "include-component-in-tag": false,
       "extra-files": [
         "README.md"
       ],
