--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -42,21 +42,21 @@ jobs:
         runs-on: ubuntu-latest
         env:
             GO_VERSION: ~1.22
-            DAG_VERSION: 0.11.7
+            DAG_VERSION: 0.12.3
         strategy:
             matrix:
-                module: [gotest]
+                module: [gotest, module-template]
         name: Publishing ${{ matrix.module }} in the Daggerverse 🚀 'README.md'))
         steps:
             - uses: actions/checkout@v4
               with:
                   fetch-depth: 0
             - name: Set up Go
-              uses: actions/setup-go@v4
+              uses: actions/setup-go@v5
               with:
                   go-version: ${{ env.GO_VERSION }}
             - name: Dagger Develop on Module 📦 ${{ matrix.module }} with Dagger ${{ env.DAG_VERSION }}
-              uses: dagger/dagger-for-github@v5
+              uses: dagger/dagger-for-github@v6
               with:
                   verb: develop
                   module: ${{ matrix.module }}
@@ -64,7 +64,7 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             - name: Publishing ${{ matrix.module }} in the Daggerverse 🚀
-              uses: dagger/dagger-for-github@v5
+              uses: dagger/dagger-for-github@v6
               with:
                   verb: publish
                   module: ${{ matrix.module }}
