--- a/.github/workflows/mod-gotest-ci.yaml
+++ b/.github/workflows/mod-gotest-ci.yaml
@@ -1,145 +1,230 @@
 ---
-name: Gotest CI 🧹
+name: gotest CI 🧹
 on:
-    push:
-        branches:
-            - main
-            - master
-        paths:
-            - gotest/**/*.go
-    pull_request:
-        paths:
-            - gotest/**/*.go
-    workflow_dispatch:
+  push:
+    branches:
+      - main
+      - master
+    paths:
+      - gotest/**/*.go
+  pull_request:
+    paths:
+      - gotest/**/*.go
+  workflow_dispatch:
 
 permissions:
-    contents: read
-    pull-requests: read
-    checks: write
+  contents: read
+  pull-requests: read
+  checks: write
 
 defaults:
-    run:
-        working-directory: gotest
+  run:
+    working-directory: gotest
 
 jobs:
-    linter:
-        strategy:
-            matrix:
-                go: ['1.22']
-                dagversion: [0.11.6, 0.11.7]
-        name: Lint gotest on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-go@v5
-              with:
-                  go-version: ${{ matrix.go }}
-            - name: Dagger Develop on Module 📦 with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v5
-              with:
-                  verb: develop
-                  module: gotest
-                  version: ${{ matrix.dagversion }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Dagger Develop on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v5
-              with:
-                  verb: develop
-                  module: gotest/tests
-                  version: ${{ matrix.dagversion }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Dagger Call on Module with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v5
-              with:
-                  verb: call
-                  module: gotest
-                  version: ${{ matrix.dagversion }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Dagger Call on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v5
-              with:
-                  verb: call
-                  module: gotest/tests
-                  version: ${{ matrix.dagversion }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  dagger-linter:
+    strategy:
+      matrix:
+        go: [ '1.22' ]
+        dagversion: [ 0.12.0, 0.12.1, 0.12.2, 0.12.3 ]
+    name: Lint gotest on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ matrix.go }}
+      - name: Dagger Develop on Module 📦 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: gotest
+          version: ${{ matrix.dagversion }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Dagger Develop on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: gotest/tests
+          version: ${{ matrix.dagversion }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    golangci-lint:
-        strategy:
-            matrix:
-                go: ['1.22']
-        name: GolangCI-Lint for gotest
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-go@v5
-              with:
-                  go-version: ${{ matrix.go }}
-            - name: Dagger Develop on Module 📦 gotest with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v5
-              with:
-                  verb: develop
-                  module: gotest
-                  version: ${{ matrix.dagversion }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Run golangci-lint on gotest 📦
-              uses: golangci/golangci-lint-action@v6
-              with:
-                  version: v1.58
-                  args: --config .golangci.yml ./gotest/dagger
-            - name: Dagger Develop on Module tests 🧪 gotest with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v5
-              with:
-                  verb: develop
-                  module: gotest/tests
-                  version: ${{ matrix.dagversion }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Run golangci-lint on gotest/tests 🧪
-              uses: golangci/golangci-lint-action@v6
-              with:
-                  version: v1.58
-                  args: --config .golangci.yml ./gotest/tests/dagger
+      - name: Dagger Develop on Examples Module for Go 📄 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: gotest/examples/go
+          version: ${{ matrix.dagversion }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    module-test:
-        strategy:
-            matrix:
-                go: ['1.22']
-                dagversion: [0.11.6, 0.11.7]
-        needs: [linter, golangci-lint]
-        name: Run Tests 🧪 in gotest on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-go@v5
-              with:
-                  go-version: ${{ matrix.go }}
-            - name: Dagger Develop on Module 📦 with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v5
-              with:
-                  verb: develop
-                  module: gotest
-                  version: ${{ matrix.dagversion }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Dagger Develop on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v5
-              with:
-                  verb: develop
-                  module: gotest/tests
-                  version: ${{ matrix.dagversion }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Running Tests 💣 in gotest on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v5
-              with:
-                  verb: call
-                  args: test-all
-                  module: gotest/tests
-                  version: ${{ matrix.dagversion }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Dagger Call on Module 📦 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: call
+          module: gotest
+          version: ${{ matrix.dagversion }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Dagger Call on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: call
+          module: gotest/tests
+          version: ${{ matrix.dagversion }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Dagger Call on Test Examples/Go Module 📄 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: call
+          module: gotest/examples/go
+          version: ${{ matrix.dagversion }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  golangci-lint:
+    strategy:
+      matrix:
+        go: [ '1.22' ]
+    name: GolangCI-Lint for gotest
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ matrix.go }}
+      - name: Dagger Develop on Module 📦 gotest with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: gotest
+          version: ${{ matrix.dagversion }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run golangci-lint on gotest 📦
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.58
+          args: --config .golangci.yml ./gotest
+
+      - name: Dagger Develop on Module tests 🧪 gotest with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: gotest/tests
+          version: ${{ matrix.dagversion }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run golangci-lint on gotest/tests 🧪
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.58
+          args: --config .golangci.yml ./gotest/tests
+
+      - name: Dagger Develop on Module Examples/Go 📄 gotest with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: gotest/examples/go
+          version: ${{ matrix.dagversion }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Run golangci-lint on gotest/examples/go 📄
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.58
+          args: --config .golangci.yml ./gotest/examples/go
+
+  module-test:
+    strategy:
+      matrix:
+        go: [ '1.22' ]
+        dagversion: [ 0.12.0, 0.12.1, 0.12.2, 0.12.3 ]
+    needs: [ linter, golangci-lint ]
+    name: Run Tests 🧪 in gotest on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ matrix.go }}
+      - name: Dagger Develop on Module 📦 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: gotest
+          version: ${{ matrix.dagversion }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Dagger Develop on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: gotest/tests
+          version: ${{ matrix.dagversion }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Running Tests 💣 in gotest on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: call
+          args: test-all
+          module: gotest/tests
+          version: ${{ matrix.dagversion }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  module-examples-go:
+    strategy:
+      matrix:
+        go: [ '1.22' ]
+        dagversion: [ 0.12.0, 0.12.1, 0.12.2, 0.12.3 ]
+    needs: [ linter, golangci-lint ]
+    name: Run recipes 🥗 in gotest/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ matrix.go }}
+      - name: Dagger Develop on Module Examples 📄 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: gotest/examples/go
+          version: ${{ matrix.dagversion }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Running Recipes create container 💣 in gotest/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: call
+          args: create-container
+          module: gotest/examples/go
+          version: ${{ matrix.dagversion }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Running Recipes passed env vars 💣 in gotest/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: call
+          args: passed-env-vars
+          module: gotest/examples/go
+          version: ${{ matrix.dagversion }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Running Recipes run-arbitrary-command 💣 in gotest/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: call
+          args: run-arbitrary-command
+          module: gotest/examples/go
+          version: ${{ matrix.dagversion }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
